# Medicine-Track

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING.txt  EPC Drugs.odb  HACKING.txt  README.txt  barcodes.txt  build_instructions.txt  config.pro  database_info.txt  dotnet_config.xml  eer.mwb  foreign_keys.sql  license_template.txt  make_win_installers.bat  mtrack.qbs  mtrack.ts  mtrack_phrases.qph  mtrack_win32.wxs  mtrack_win_installer.wxs  rx_image_copyright.txt  sql_commands.txt  todo.txt  use_cases.txt  win_install_ui.wxi
core/: barcodelabel.cpp  barcodelabel.h  bl.cpp  bl.h  core.qbs  drugsearchitem.cpp  drugsearchitem.h  formularyframe.cpp  formularyframe.h  formularyframe.ui  icons.rc  inventoryframe.cpp  inventoryframe.h  inventoryframe.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mtconfig.h  mtsettings.cpp  patientframe.cpp  patientframe.h  patientframe.ui  pharmacistframe.cpp  pharmacistframe.h  pharmacistframe.ui  prescriberframe.cpp  prescriberframe.h  prescriberframe.ui  prescriptionframe.cpp  prescriptionframe.h  prescriptionframe.ui  prescriptionlabel.cpp  prescriptionlabel.h  prescriptionlabel.ui  prescriptionsearchitem.cpp  prescriptionsearchitem.h
db/: CMakeLists.txt  alertinterface.h  displaytable.cpp  displaytable.h  drugdisplay.cpp  druggroupbox.cpp  druggroupbox.h  druggroupbox.ui  drugrecord.cpp  globals.cpp  globals.h  patientdisplay.cpp  patientdisplay.ui  patientgroupbox.cpp  patientgroupbox.h  patientgroupbox.ui  patientrecord.cpp  patientrecord.h  pharmacistdisplay.cpp  pharmacistgroupbox.cpp  pharmacistgroupbox.h  pharmacistgroupbox.ui  pharmacistrecord.cpp  pharmacistrecord.h  prescriberdisplay.cpp  prescribergroupbox.cpp  prescribergroupbox.h  prescribergroupbox.ui  prescriberrecord.cpp  prescriptiondisplay.cpp  prescriptiondisplay.ui  prescriptiongroupbox.cpp  prescriptiongroupbox.h  prescriptiongroupbox.ui  prescriptionrecord.cpp  prescriptionrecord.h  shipdeltarecord.cpp  shipdeltarecord.h  shipmentdisplay.cpp  shipmentdisplay.h  (+7 more)
doc/: doc.pri  index.html  new_medication.html  new_prescription.html  search_patients.html  search_pharmacists.html  search_prescribers.html  search_prescriptions.html  toggle_active.html  write_off_inventory.html
images/: OXYGEN_LICENSE.txt
mtrack/: alertinterface.cpp  alertinterface.h  altermedicationwizard.cpp  altermedicationwizard.h  altermedicationwizard.ui  alterpharmacistwizard.cpp  alterpharmacistwizard.h  alterpharmacistwizard.ui  alterprescriberwizard.cpp  alterprescriberwizard.h  alterprescriberwizard.ui  alterprescriptionwizard.cpp  alterprescriptionwizard.h  alterprescriptionwizard.ui  altershipmentwizard.cpp  altershipmentwizard.h  altershipmentwizard.ui  apharmp_page00.cpp  apharmp_page00.h  apharmp_page00.ui  aprescriberpage_page00.cpp  aprescriberpage_page00.h  aprescriberpage_page00.ui  apw_page00.cpp  apw_page00.h  apw_page00.ui  apw_page01.cpp  apw_page01.h  apw_page01.ui  apw_page02.cpp  apw_page02.h  apw_page02.ui  asw_page00.cpp  asw_page00.h  asw_page00.ui  barcodelabel.cpp  barcodelabel.h  barcodelabel.ui  barcodes.txt  build_instructions.txt  (+59 more)
src/: CMakeLists.txt  altermedicationwizard.cpp  altermedicationwizard.h  alterpharmacistwizard.h  alterprescriberwizard.h  alterprescriberwizard.ui  alterprescriptionwizard.cpp  alterprescriptionwizard.h  alterprescriptionwizard.ui  altershipmentwizard.cpp  altershipmentwizard.ui  apharmp_page00.h  apharmp_page00.ui  aprescriberpage_page00.cpp  apw_page00.cpp  apw_page00.h  apw_page00.ui  apw_page01.cpp  apw_page01.h  apw_page01.ui  apw_page02.cpp  apw_page02.h  asw_page00.h  barcodelabel.cpp  barcodelabel.h  barcodelabel.ui  formularyframe.cpp  formularyframe.h  formularyframe.ui  globals.cpp  globals.h  inventoryframe.cpp  inventoryframe.h  inventoryframe.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  medicationsframe.cpp  medicationsframe.h  (+37 more)
src/db/: alertinterface.cpp  alertinterface.h  db.pri  drugdisplay.cpp  drugdisplay.h  drugdisplay.ui  druggroupbox.cpp  druggroupbox.h  druggroupbox.ui  drugrecord.cpp  drugrecord.h  medicationrecord.cpp  medicationrecord.h  patientdisplay.cpp  patientdisplay.h  patientdisplay.ui  patientgroupbox.cpp  patientgroupbox.h  patientgroupbox.ui  patientrecord.cpp  patientrecord.h  pharmacistdisplay.cpp  pharmacistdisplay.h  pharmacistdisplay.ui  pharmacistgroupbox.cpp  pharmacistgroupbox.h  pharmacistgroupbox.ui  pharmacistrecord.cpp  pharmacistrecord.h  prescriberdisplay.cpp  prescriberdisplay.h  prescriberdisplay.ui  prescribergroupbox.cpp  prescribergroupbox.h  prescribergroupbox.ui  prescriberrecord.cpp  prescriberrecord.h  prescriptiondisplay.cpp  prescriptiondisplay.h  prescriptiondisplay.ui  (+15 more)
src/wizards/: Prescription_00.ui  medication_00.cpp  medication_00.h  medication_00.ui  medication_01.cpp  medication_01.h  medication_01.ui  medicationwizard.cpp  medicationwizard.h  medicationwizard.ui  patient_00.cpp  patient_00.h  patient_00.ui  patientwizard.cpp  patientwizard.h  patientwizard.ui  pharmacist_00.cpp  pharmacist_00.h  pharmacist_00.ui  pharmacistwizard.cpp  pharmacistwizard.h  pharmacistwizard.ui  prescriber_00.cpp  prescriber_00.h  prescriber_00.ui  prescriberwizard.cpp  prescriberwizard.h  prescriberwizard.ui  prescription_00.cpp  prescription_00.h  prescription_01.cpp  prescription_01.h  prescription_01.ui  prescription_02.cpp  prescription_02.h  prescription_02.ui  prescriptionwizard.cpp  prescriptionwizard.h  prescriptionwizard.ui  shipment_00.cpp  (+6 more)
wizards/: CMakeLists.txt  Prescription_00.ui  medication_00.cpp  medication_00.h  medication_00.ui  medication_01.h  medicationwizard.cpp  medicationwizard.h  patient_00.cpp  patient_00.h  patientwizard.cpp  patientwizard.h  pharmacist_00.h  pharmacist_00.ui  pharmacistwizard.h  prescriber_00.h  prescriber_00.ui  prescriberwizard.h  prescription_00.cpp  prescription_00.h  prescription_00.ui  prescription_01.cpp  prescription_01.h  prescription_02.cpp  prescription_02.h  prescriptionwizard.cpp  prescriptionwizard.h  prescriptionwizard.ui  shipment_00.cpp  shipment_00.h  shipment_00.ui  shipmentwizard.cpp  shipmentwizard.h
(+27 files in other folders)
