CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/${DB_DIR})

SET(SOURCES alertinterface.cpp)
SET(SOURCES ${SOURCES}; patientrecord.cpp)
SET(SOURCES ${SOURCES}; prescriptionrecord.cpp)
SET(SOURCES ${SOURCES}; prescriberrecord.cpp)
SET(SOURCES ${SOURCES}; pharmacistrecord.cpp)
SET(SOURCES ${SOURCES}; shipmentrecord.cpp)
SET(SOURCES ${SOURCES}; drugrecord.cpp)
SET(SOURCES ${SOURCES}; shipdeltarecord.cpp)
SET(SOURCES ${SOURCES}; patientdisplay.cpp)
SET(SOURCES ${SOURCES}; drugdisplay.cpp)
SET(SOURCES ${SOURCES}; pharmacistdisplay.cpp)
SET(SOURCES ${SOURCES}; prescriberdisplay.cpp)
SET(SOURCES ${SOURCES}; shipmentdisplay.cpp)
SET(SOURCES ${SOURCES}; prescriptiondisplay.cpp)
SET(SOURCES ${SOURCES}; patientgroupbox.cpp)
SET(SOURCES ${SOURCES}; druggroupbox.cpp)
SET(SOURCES ${SOURCES}; pharmacistgroupbox.cpp)
SET(SOURCES ${SOURCES}; prescribergroupbox.cpp)
SET(SOURCES ${SOURCES}; prescriptiongroupbox.cpp)
SET(SOURCES ${SOURCES}; shipmentgroupbox.cpp)
SET(SOURCES ${SOURCES}; globals.cpp)
SET(SOURCES ${SOURCES}; displaytable.cpp)

SET(HEADERS ${HEADERS}; patientrecord.h)
SET(HEADERS ${HEADERS}; prescriptionrecord.h)
SET(HEADERS ${HEADERS}; prescriberrecord.h)
SET(HEADERS ${HEADERS}; pharmacistrecord.h)
SET(HEADERS ${HEADERS}; shipmentrecord.h)
SET(HEADERS ${HEADERS}; drugrecord.h)
SET(HEADERS ${HEADERS}; shipdeltarecord.h)
SET(HEADERS ${HEADERS}; globals.h)

SET(MOCS alertinterface.h)
SET(MOCS ${MOCS}; patientdisplay.h)
SET(MOCS ${MOCS}; drugdisplay.h)
SET(MOCS ${MOCS}; pharmacistdisplay.h)
SET(MOCS ${MOCS}; prescriberdisplay.h)
SET(MOCS ${MOCS}; shipmentdisplay.h)
SET(MOCS ${MOCS}; prescriptiondisplay.h)
SET(MOCS ${MOCS}; patientgroupbox.h)
SET(MOCS ${MOCS}; druggroupbox.h)
SET(MOCS ${MOCS}; pharmacistgroupbox.h)
SET(MOCS ${MOCS}; prescribergroupbox.h)
SET(MOCS ${MOCS}; prescriptiongroupbox.h)
SET(MOCS ${MOCS}; shipmentgroupbox.h)
SET(MOCS ${MOCS}; displaytable.h)

SET(FORMS patientdisplay.ui)
SET(FORMS ${FORMS}; drugdisplay.ui)
SET(FORMS ${FORMS}; pharmacistdisplay.ui)
SET(FORMS ${FORMS}; prescriberdisplay.ui)
SET(FORMS ${FORMS}; shipmentdisplay.ui)
SET(FORMS ${FORMS}; prescriptiondisplay.ui)
SET(FORMS ${FORMS}; patientgroupbox.ui)
SET(FORMS ${FORMS}; druggroupbox.ui)
SET(FORMS ${FORMS}; pharmacistgroupbox.ui)
SET(FORMS ${FORMS}; prescribergroupbox.ui)
SET(FORMS ${FORMS}; prescriptiongroupbox.ui)
SET(FORMS ${FORMS}; shipmentgroupbox.ui)

QT4_WRAP_CPP(MOC_HEADERS ${MOCS})
QT4_WRAP_UI(FORM_HEADERS ${FORMS})

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_LIBRARY(db ${SOURCES} ${MOC_HEADERS} ${FORM_HEADERS})
