CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/db")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/wizards")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src")

SET(SOURCES medicationwizard.cpp)
SET(SOURCES ${SOURCES}; pharmacistwizard.cpp)
SET(SOURCES ${SOURCES}; prescriberwizard.cpp)
SET(SOURCES ${SOURCES}; prescriptionwizard.cpp)
SET(SOURCES ${SOURCES}; shipmentwizard.cpp)
SET(SOURCES ${SOURCES}; patientwizard.cpp)
SET(SOURCES ${SOURCES}; pharmacist_00.cpp)
SET(SOURCES ${SOURCES}; prescriber_00.cpp)
SET(SOURCES ${SOURCES}; prescription_00.cpp)
SET(SOURCES ${SOURCES}; prescription_01.cpp)
SET(SOURCES ${SOURCES}; prescription_02.cpp)
SET(SOURCES ${SOURCES}; shipment_00.cpp)
SET(SOURCES ${SOURCES}; medication_00.cpp)
SET(SOURCES ${SOURCES}; medication_01.cpp)
SET(SOURCES ${SOURCES}; patient_00.cpp)

SET(MOCS medicationwizard.h)
SET(MOCS ${MOCS}; pharmacistwizard.h)
SET(MOCS ${MOCS}; prescriberwizard.h)
SET(MOCS ${MOCS}; prescriptionwizard.h)
SET(MOCS ${MOCS}; shipmentwizard.h)
SET(MOCS ${MOCS}; patientwizard.h)
SET(MOCS ${MOCS}; pharmacist_00.h)
SET(MOCS ${MOCS}; prescriber_00.h)
SET(MOCS ${MOCS}; prescription_00.h)
SET(MOCS ${MOCS}; prescription_01.h)
SET(MOCS ${MOCS}; prescription_02.h)
SET(MOCS ${MOCS}; shipment_00.h)
SET(MOCS ${MOCS}; medication_00.h)
SET(MOCS ${MOCS}; medication_01.h)
SET(MOCS ${MOCS}; patient_00.h)

SET(FORMS medicationwizard.ui)
SET(FORMS ${FORMS}; patientwizard.ui)
SET(FORMS ${FORMS}; shipmentwizard.ui)
SET(FORMS ${FORMS}; prescriptionwizard.ui)
SET(FORMS ${FORMS}; prescriberwizard.ui)
SET(FORMS ${FORMS}; pharmacistwizard.ui)
SET(FORMS ${FORMS}; pharmacist_00.ui)
SET(FORMS ${FORMS}; prescriber_00.ui)
SET(FORMS ${FORMS}; patient_00.ui)
SET(FORMS ${FORMS}; medication_00.ui)
SET(FORMS ${FORMS}; medication_01.ui)
SET(FORMS ${FORMS}; shipment_00.ui)
SET(FORMS ${FORMS}; prescription_01.ui)
SET(FORMS ${FORMS}; prescription_02.ui)
SET(FORMS ${FORMS}; prescription_00.ui)

QT4_WRAP_CPP(MOC_HEADERS ${MOCS})
QT4_WRAP_UI(FORM_HEADERS ${FORMS})

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

ADD_LIBRARY(wizards ${SOURCES} ${MOC_HEADERS} ${FORM_HEADERS})
TARGET_LINK_LIBRARIES(wizards db)
